@@ -14,6 +14,7 @@
 
 === Minor Changes
 * Reek's RDoc is now hosted at http://rdoc.info/projects/kevinrutherford/reek
+* If a dir is passed on the command-line all **/*.rb files are examined below it
 * Several changes to the LongMethod counting algorithm:
 ** LongMethod now counts statements deeper into each method (fixed #25)
 ** LongMethod no longer counts control structures, only their contained stmts
